@startuml "Robot Composition"

class "Eye" as dCE {
  +Eye(double x, double y, double radius)
}

class "Head" as dCH {
  -Eye lEye
  -Eye rEye

  +Head(double x, double y, double radius)

  +Eye getEye(int index)
  +double getForeHeadY()
}

class "HeadTorso" as dCHT {
  -Torso torso

  +HeadTorso(double x, double y, double radius)

  #double[] getTorsoXCoords()
  #double[] getTorsoYCoords()

  +boolean isTorsoTouched(double x, double y)
  +boolean isTorsoHTouched(double x)
  +boolean isTorsoVTouched(double y)
}

class "HeadTorsoArms" as dCHTA {
  -LimbSegment lArm, rArm;

  +HeadTorsoArms(double x, double y, double radius)

  +LimbSegment getArm(int index)
}

class "HeadTorsoArmsLegs" as dCHTAL {
  -LimbSegment lLeg, rLeg;

  +HeadTorsoArmsLegs(double x, double y, double radius)

  +LimbSegment getLeg(int index)
}

class "Torso" as dRT {
  +Torso(double x, double y, double h, double w)
  +Torso(double x, double y, double radius)
}

class "LimbSegment" as LimbSegment {
  -LimbSegment nextSegment
  -boolean isLeftLimb
  -boolean hasNextSegment

  -LimbSegment(double x, double y, double h, double w, boolean isExtremity, boolean isLeftLimb)
  +LimbSegment(double x, double y, double radius, boolean isLeftLimb)
  
  -void addSegment(LimbSegment segment)
  -void addForeLimb()
  -void addExtremity()

  +void rotate(double angle)
  +double getExtremityXEnd()
  +double getExtremityYEnd()
}

class "CompleteRobot" as CR {
  -ActionStep moveAction
  -Action curentAction
  -Speech speech

  +CompleteRobot(double x, double y, double radius)

  #changeMoveAction(ActionStep newMoveAction)
  #changeAction(Action newAction)

  #void act()
  #void act(Direction dir)
  +void gotoX(double destX, String destLabel)
  -void moveLeft()
  -void moveRight()
  #void say(String speechText)
}

dCH "1" *-- "2" dCE : has
dCH <|-- dCHT
dCHT <|-- dCHTA
dCHTA "1" *-- "2" LimbSegment : has
dCHTA <|-- dCHTAL
dCHTAL "1" *-- "2" LimbSegment : has
dCHT "1" *-- "1" dRT : has
LimbSegment "1" *-- "(0,1)" LimbSegment : has
dCHTAL <|-- CR
@enduml